better layout for python output packaging that includes python

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="mui-container">
+    <div id="form-container" class="mui-container">
 
                 <form id="macroForm" action="#" class="mui-form">
                     <legend>Macro Pivot</legend>
