don't use Python env, use an entire Python interpreter to be portable better format in stdout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <div class="mui-row">
                         <div class="mui-col-md-9">
                             <div class="mui-textfield mui-textfield--float-label">
-                                <input id="file" type="text" value="test.xlsx">
+                                <input id="file" type="text" value="C:\Users\Mathias\Downloads\Registre FI.xls">
                                 <label>Fichier excel</label>
                             </div>
                         </div>
@@ -24,19 +24,19 @@
                         </div>
                     </div>
                     <div class="mui-textfield mui-textfield--float-label">
-                        <input id="srcSheet" type="text" value="Sheet1">
+                        <input id="srcSheet" type="text" value="Tableau de suivi">
                         <label>Onglet de la matrice d'origine</label>
                     </div>
                     <div class="mui-textfield mui-textfield--float-label">
-                        <input id="srcPosition" type="text" value="D7">
+                        <input id="srcPosition" type="text" value="A2">
                         <label>Position de la matrice d'origine</label>
                     </div>
                     <div class="mui-textfield mui-textfield--float-label">
-                        <input id="destSheet" type="text" value="Sheet1">
+                        <input id="destSheet" type="text" value="Matrice">
                         <label>Onglet de la matrice de destination</label>
                     </div>
                     <div class="mui-textfield mui-textfield--float-label">
-                        <input id="destPosition" type="text" value="O16">
+                        <input id="destPosition" type="text" value="B2">
                         <label>Position de la matrice de destination</label>
                     </div>
                     <button id="macroFormButton" type="submit" class="mui-btn mui-btn--raised mui-btn--primary">Convertir</button>
